Name: cats
Cabal-Version: >=1.6
Version: 0.1.0
Build-Type: Simple
License: MIT
License-File: LICENSE
Copyright: 2012 Stephen Diehl
Author: Stephen Diehl
Maintainer: stephen.m.diehl@gmail.com
Stability: Experimental
Synopsis: Tikz Diagrams for Pandoc
Description:
    Tikz Diagrams for Pandoc
Category: Control
Tested-With: GHC ==7.4.2

Executable cats
  Main-Is:        Main.hs
  Hs-Source-Dirs: src

Source-Repository head
    Type: git
    Location: https://github.com/sdiehl/cats

Library
    Hs-Source-Dirs:  src
    Build-Depends:  
        pandoc     >= 1.9.3 && < 1.10,
        bytestring >= 0.9   && < 0.10,
        filepath   >= 1.0   && < 1.4,
        unix       >= 2.4   && < 2.6,
        process    >= 1.0   && < 1.2,
        pureMD5    >= 2.1,
        base       >= 4 && < 5

    Exposed-Modules:
        Data.Pandoc.Tikz
