name:                cats
version:             0.1.0.1
synopsis:            Commutative via TikZ for Pandoc
homepage:            https://github.com/sdiehl/cats
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2012 Stephen Diehl
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.1
Description:
    Tikz Diagrams for Pandoc
Tested-With: GHC ==7.4.2

Source-Repository head
    Type: git
    Location: https://github.com/sdiehl/cats

Library
    Exposed-Modules:
        Data.Pandoc.Tikz

    Hs-Source-Dirs:     src
    default-language:   Haskell2010

    Build-Depends:  
        base       >= 4 && < 5,
        pandoc     >= 1.9.3,
        bytestring >= 0.9,
        filepath   >= 1.0,
        unix       >= 2.4,
        process    >= 1.0,
        pureMD5    >= 2.1,
        data-default

Executable cats
  Main-Is:            Main.hs
  Hs-Source-Dirs:     src
  default-language:   Haskell2010

  Build-Depends:  
      base       >= 4 && < 5,
      pandoc     >= 1.9.3,
      bytestring >= 0.9,
      filepath   >= 1.0,
      unix       >= 2.4,
      process    >= 1.0,
      pureMD5    >= 2.1,
      optparse-applicative >= 0.7,
      data-default
